install/manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taico
  namespace: taico
  labels:
    app: taico
spec:
  type: ClusterIP
  selector:
    app: taico
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
