install/manifests/base/https-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: taico-https-redirect
  namespace: taico
spec:
  parentRefs:
    - name: public
      namespace: gateways
      sectionName: http
  hostnames:
    - taico.app
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
