install/manifests/base/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: taico
  namespace: taico
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: taico
      sectionName: https
  hostnames:
    - taico.app
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: taico
          port: 80
